--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -86,4 +86,5 @@
     <string name="text_copyright">Created by rbzeta (robyn.seta@gmail.com)</string>
     <string name="title_fragment_home_hist">20 Latest Entry</string>
     <string name="title_fragment_home_summary">Summary</string>
+    <string name="err_msg_cannot_save">Gagal menyimpan data</string>
 </resources>
